@@ -50,7 +50,7 @@ Dist::Zilla::Plugin::Test::Kwalitee = 0
 Dist::Zilla::Plugin::PruneCruft = 0
 Dist::Zilla::Plugin::ManifestSkip = 0
 Dist::Zilla::Plugin::Git::Describe = 0
-Dist::Zilla::Plugin::PkgVersion = 0
+Dist::Zilla::Plugin::PkgVersion = 4.300036
 Dist::Zilla::Plugin::PodWeaver = 0
 Dist::Zilla::Plugin::NextRelease = 4.300018
 Dist::Zilla::Plugin::AutoPrereqs = 0
